fix(form): fix misalignment in fixed label (#895)

--- a/packages/theme/styles/app/antd/_form.less
+++ b/packages/theme/styles/app/antd/_form.less
@@ -4,7 +4,7 @@
   }
 }
 
-.@{ant-prefix}-form-item-children {
+.@{ant-prefix}-form-item-control {
   em {
     margin-left: @layout-gutter;
   }
